fix gap

--- a/template.css
+++ b/template.css
@@ -117,7 +117,7 @@ img{
 .messagebox{
     background-color: #EADFDF;
     height: 600px;
-    margin-top: -4px;
+    margin-top: -5px;
 }
 
 .message{
